--- a/index.html
+++ b/index.html
@@ -2,9 +2,60 @@
 <html>
   <head>
     <title>ANEMOIA</title>
+    <meta charset="UTF-8">
+
+    <!-- Polices -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Special+Elite&display=swap" rel="stylesheet">
+
+    <style>
+      body {
+        background-color: #0d0d0d;
+        background-image: radial-gradient(circle at top, #1a1a1a, #0d0d0d);
+        color: #f5f5dc;
+        font-family: 'Special Elite', monospace;
+        text-align: center;
+        padding: 60px;
+      }
+
+      h1 {
+        font-family: 'Cinzel Decorative', serif;
+        color: #8B0000;
+        font-size: 3.5em;
+        text-shadow: 2px 2px 10px black;
+        margin-bottom: 30px;
+      }
+
+      p {
+        font-size: 1.2em;
+        line-height: 1.6em;
+        max-width: 700px;
+        margin: 20px auto;
+      }
+
+      .box {
+        background: rgba(255, 117, 24, 0.05); /* léger orange Halloween */
+        border: 1px solid #8B0000;
+        padding: 25px;
+        border-radius: 8px;
+        display: inline-block;
+        margin-top: 30px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.7);
+      }
+
+      .hint {
+        color: #ff7518;
+        font-weight: bold;
+      }
+    </style>
   </head>
+
   <body>
-    <h1>Bienvenue dans l’Ombre</h1>
-    <p>Les initiés savent que la nuit ne fait que commencer…</p>
+    <h1>ANEMOIA</h1>
+    <div class="box">
+      <p>« La Famille n’oublie jamais. Les ombres veillent. »</p>
+      <p class="hint">Indice : cherchez le mot <strong>CLAVIS</strong>.</p>
+      <p>(Essayez de taper <code>indice.html</code> à la fin du lien du site…)</p>
+    </div>
   </body>
 </html>
+
