--- a/index.html
+++ b/index.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>ANEMOIA</title>
-    <meta charset="UTF-8">
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>ANEMOIA — Accueil</title>
 
-    <!-- Polices -->
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Special+Elite&display=swap" rel="stylesheet">
+<!-- Police cursive vintage -->
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
-    <style>
-      body {
-        background-color: #0d0d0d;
-        background-image: radial-gradient(circle at top, #1a1a1a, #0d0d0d);
-        color: #f5f5dc;
-        font-family: 'Special Elite', monospace;
-        text-align: center;
-        padding: 60px;
-      }
+<style>
+body {
+    margin:0;
+    padding:0;
+    background: linear-gradient(135deg, #0c0c0c, #1a1a1a);
+    color: #f5f5dc;
+    font-family: 'Georgia', serif;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
 
-      h1 {
-        font-family: 'Cinzel Decorative', serif;
-        color: #8B0000;
-        font-size: 3.5em;
-        text-shadow: 2px 2px 10px black;
-        margin-bottom: 30px;
-      }
+.container {
+    text-align: center;
+    padding: 50px 40px;
+    background: rgba(0,0,0,0.6);
+    border: 1px solid rgba(255,255,255,0.05);
+    border-radius: 12px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.8);
+    max-width: 800px;
+}
 
-      p {
-        font-size: 1.2em;
-        line-height: 1.6em;
-        max-width: 700px;
-        margin: 20px auto;
-      }
+h1 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 4em;
+    color: #ff7518;
+    text-shadow: 2px 2px 10px #000;
+    margin-bottom: 20px;
+}
 
-      .box {
-        background: rgba(255, 117, 24, 0.05); /* léger orange Halloween */
-        border: 1px solid #8B0000;
-        padding: 25px;
-        border-radius: 8px;
-        display: inline-block;
-        margin-top: 30px;
-        box-shadow: 0 0 15px rgba(0,0,0,0.7);
-      }
+p {
+    font-size: 1.3em;
+    line-height: 1.8em;
+    color: #f5f5dc;
+}
 
-      .hint {
-        color: #ff7518;
-        font-weight: bold;
-      }
-    </style>
-  </head>
+.hint {
+    margin-top: 30px;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #ff4500;
+}
 
-  <body>
+footer {
+    position: absolute;
+    bottom: 20px;
+    font-size: 0.9em;
+    color: rgba(255,255,255,0.4);
+}
+</style>
+</head>
+
+<body>
+<div class="container">
     <h1>ANEMOIA</h1>
-    <div class="box">
-      <p>« La Famille n’oublie jamais. Les ombres veillent. »</p>
-      <p class="hint">Indice : cherchez le mot <strong>CLAVIS</strong>.</p>
-      <p>(Essayez de taper <code>indice.html</code> à la fin du lien du site…)</p>
-    </div>
-  </body>
+    <p>La Famille veille dans l’ombre. Seuls ceux qui savent regarder trouveront les secrets cachés…</p>
+    <p class="hint">Indice : le mot <strong>CLAVIS</strong> ouvre la voie.</p>
+</div>
+<footer>Octobre 2025 — Halloween Mafia ARG</footer>
+</body>
 </html>
-
