--- a/index.html
+++ b/index.html
@@ -4,69 +4,8 @@
 <meta charset="UTF-8">
 <title>ANEMOIA — Accueil</title>
 
-<!-- Police cursive vintage -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-
 <style>
 body {
     margin:0;
     padding:0;
-    background: linear-gradient(135deg, #0c0c0c, #1a1a1a);
-    color: #f5f5dc;
-    font-family: 'Georgia', serif;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-.container {
-    text-align: center;
-    padding: 50px 40px;
-    background: rgba(0,0,0,0.6);
-    border: 1px solid rgba(255,255,255,0.05);
-    border-radius: 12px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.8);
-    max-width: 800px;
-}
-
-h1 {
-    font-family: 'Great Vibes', cursive;
-    font-size: 4em;
-    color: #ff7518;
-    text-shadow: 2px 2px 10px #000;
-    margin-bottom: 20px;
-}
-
-p {
-    font-size: 1.3em;
-    line-height: 1.8em;
-    color: #f5f5dc;
-}
-
-.hint {
-    margin-top: 30px;
-    font-weight: bold;
-    font-size: 1.2em;
-    color: #ff4500;
-}
-
-footer {
-    position: absolute;
-    bottom: 20px;
-    font-size: 0.9em;
-    color: rgba(255,255,255,0.4);
-}
-</style>
-</head>
-
-<body>
-<div class="container">
-    <h1>ANEMOIA</h1>
-    <p>La Famille veille dans l’ombre. Seuls ceux qui savent regarder trouveront les secrets cachés…</p>
-    <p class="hint">Indice : le mot <strong>CLAVIS</strong> ouvre la voie.</p>
-</div>
-<footer>Octobre 2025 — Halloween Mafia ARG</footer>
-</body>
-</html>
+    background: linear-gradient(135deg,
