--- a/index.html
+++ b/index.html
@@ -8,4 +8,18 @@
 body {
     margin:0;
     padding:0;
-    background: linear-gradient(135deg,
+    background: linear-gradient(135deg, #0c0c0c, #1a1a1a);
+    color: #f5f5dc;
+    font-family: 'Georgia', serif;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.container {
+    text-align: center;
+    padding: 50px 40px;
+    background: rgba(0,0,0,0.6);
+    borde
