--- a/index.html
+++ b/index.html
@@ -22,4 +22,50 @@ body {
     text-align: center;
     padding: 50px 40px;
     background: rgba(0,0,0,0.6);
-    borde
+    border: 1px solid rgba(255,255,255,0.05);
+    border-radius: 12px;
+    box-shadow: 0 0 30px rgba(0,0,0,0.8);
+    max-width: 800px;
+}
+
+h1 {
+    font-family: 'Georgia', serif; /* sobre et classe */
+    color: rgba(255, 255, 0, 0.8); /* jaune transparent */
+    letter-spacing: 8px; /* espacement des lettres */
+    font-size: 3.5em;
+    text-shadow: 1px 1px 5px #000; /* léger relief */
+    margin-bottom: 25px;
+}
+
+p {
+    font-size: 1.3em;
+    line-height: 1.8em;
+    color: #f5f5dc;
+}
+
+.hint {
+    margin-top: 30px;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #ff7518;
+}
+
+footer {
+    position: absolute;
+    bottom: 20px;
+    font-size: 0.8em;
+    color: rgba(255,255,0,0.2); /* très discret, jaune transparent */
+    letter-spacing: 5px;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
+    <h1>ANEMOIA</h1>
+    <p>La Famille veille dans l’ombre. Seuls ceux qui savent regarder trouveront les secrets cachés…</p>
+    <p class="hint">Indice : le mot <strong>CLAVIS</strong> ouvre la voie.</p>
+</div>
+<footer>A N E M O I A ARG.</footer>
+</body>
+</html>
