--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>ANEMOIA — Accueil</title>
+<h1 style="font-family: 'Beyond Wonderland', sans-serif; font-size: 3em; color: rgba(200, 200, 200, 0.6); letter-spacing: 0.1em;">
+    A N E M O I A
+</h1>
+
 
 <style>
 body {
