--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>ANEMOIA ARG</title>
+<meta charset="UTF-8">
+<title>A N E M O I A ARG</title>
 
-  <style>
-    /* Import de la police Beyond Wonderland depuis ton repo */
-    @font-face {
-      font-family: 'Beyond Wonderland';
-      src: url('fonts/beyond-wonderland.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
+<style>
+/* Import de la police locale */
+@font-face {
+    font-family: 'BeyondWonderland';
+    src: url('fonts/beyond-wonderland.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #080004;
-      background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-      font-family: 'Arial', sans-serif;
-      color: #f5f5f5;
-      text-align: center;
-      min-height: 100vh;
-      display: flex;
-      fle
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #080004;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+    background-repeat: repeat;
+    color: #f5f5dc;
+    font-family: 'BeyondWonderland', sans-serif;
+    text-align: center;
+}
 
+h1 {
+    font-family: 'BeyondWonderland', sans-serif;
+    font-size: 5em;
+    color: rgba(255, 255, 0, 0.3); /* Jaune transparent */
+    letter-spacing: 0.5em;
+    margin-top: 150px;
+}
+
+.subtitle {
+    font-size: 1.5em;
+    color: rgba(255,255,255,0.15);
+    margin-top: 20px;
+    letter-spacing: 0.2em;
+}
+</style>
+</head>
+
+<body>
+    <h1>A N E M O I A</h1>
+    <div class="subtitle">ARG.</div>
+</body>
+</html>
