--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>A N E M O I A ARG</title>
+  <meta charset="UTF-8">
+  <title>A N E M O I A ARG</title>
 
-<style>
-/* Import de la police locale */
-@font-face {
-    font-family: 'BeyondWonderland';
-    src: url('fonts/beyond-wonderland.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+  <!-- Importation de la police Beyond Wonderland -->
+  <style>
+    @font-face {
+      font-family: 'BeyondWonderland';
+      src: url('https://YOUR_LINK_TO_BTF_FILE.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
 
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #080004;
-    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-    background-repeat: repeat;
-    color: #f5f5dc;
-    font-family: 'BeyondWonderland', sans-serif;
-    text-align: center;
-}
+    body {
+      background-color: #080004;
+      background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+      background-repeat: repeat;
+      color: rgba(255,255,255,0.8);
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 100px 20px;
+    }
 
-h1 {
-    font-family: 'BeyondWonderland', sans-serif;
-    font-size: 5em;
-    color: rgba(255, 255, 0, 0.3); /* Jaune transparent */
-    letter-spacing: 0.5em;
-    margin-top: 150px;
-}
+    h1 {
+      font-family: 'BeyondWonderland', sans-serif;
+      font-size: 100px;
+      letter-spacing: 20px;
+      color: rgba(255, 255, 0, 0.4); /* jaune transparent */
+      margin: 0;
+    }
 
-.subtitle {
-    font-size: 1.5em;
-    color: rgba(255,255,255,0.15);
-    margin-top: 20px;
-    letter-spacing: 0.2em;
-}
-</style>
-</head>
+    .subtle {
+      font-size: 20px;
+      color: rgba(255, 255, 0, 0.15);
+      margin-top: 10px;
+    }
 
-<body>
-    <h1>A N E M O I A</h1>
-    <div class="subtitle">ARG.</div>
-</body>
-</html>
+    .enigme {
+      margin-top: 50px;
+      font-size: 20px;
+      color: rgba(255, 255, 0, 0.15); /* texte très discret comme ARG */
+      max-width: 600px;
