--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <title>A N E M O I A ARG</title>
 
-  <!-- Importation de la police Beyond Wonderland -->
   <style>
     @font-face {
       font-family: 'BeyondWonderland';
-      src: url('https://YOUR_LINK_TO_BTF_FILE.ttf') format('truetype');
+      src: url('fonts/Beyond Wonderland.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
@@ -23,22 +22,10 @@
       padding: 100px 20px;
     }
 
+    /* TITRE STYLE PAPER VINTAGE + GLOW */
     h1 {
       font-family: 'BeyondWonderland', sans-serif;
       font-size: 100px;
       letter-spacing: 20px;
-      color: rgba(255, 255, 0, 0.4); /* jaune transparent */
-      margin: 0;
-    }
-
-    .subtle {
-      font-size: 20px;
-      color: rgba(255, 255, 0, 0.15);
-      margin-top: 10px;
-    }
-
-    .enigme {
-      margin-top: 50px;
-      font-size: 20px;
-      color: rgba(255, 255, 0, 0.15); /* texte très discret comme ARG */
-      max-width: 600px;
+      color: rgba(255, 255, 0, 0.35); /* jaune transparent */
+      text-shadow:
