--- a/index.html
+++ b/index.html
@@ -22,10 +22,33 @@
       padding: 100px 20px;
     }
 
-    /* TITRE STYLE PAPER VINTAGE + GLOW */
     h1 {
       font-family: 'BeyondWonderland', sans-serif;
       font-size: 100px;
       letter-spacing: 20px;
-      color: rgba(255, 255, 0, 0.35); /* jaune transparent */
+      color: rgba(255, 255, 0, 0.35);
+      text-shadow:
+        1px 1px 0 #00000020,
+        2px 2px 0 #00000015,
+        3px 3px 6px #FFD70040;
+      margin: 0;
+    }
+
+    .subtle {
+      font-size: 20px;
+      color: rgba(255, 255, 0, 0.15);
+      margin-top: 10px;
+    }
+
+    .enigme {
+      margin-top: 50px;
+      font-size: 20px;
+      color: rgba(255, 255, 0, 0.15);
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.6;
+    }
+
+    .enigme p {
       text-shadow:
