--- a/index.html
+++ b/index.html
@@ -51,4 +51,19 @@
     }
 
     .enigme p {
-      text-shadow:
+      text-shadow: 1px 1px 2px #00000040;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>A N E M O I A</h1>
+  <p class="subtle">A N E M O I A ARG.</p>
+
+  <div class="enigme">
+    <p>Indice : les lettres majuscules cachent le mot <strong>CLAVIS</strong>.</p>
+    <p>Essayez de taper <code>indice.html</code> à la fin du lien pour continuer…</p>
+  </div>
+
+</body>
+</html>
