--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
   <title>ANEMOIA ARG</title>
 
   <style>
-
     @font-face {
       font-family: 'Beyond Wonderland';
       src: url('fonts/Beyond Wonderland.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
     }
 
     @font-face {
       font-family: 'Devil Inside';
       src: url('fonts/Devil Inside.otf') format('opentype');
-      font-weight: normal;
-      font-style: normal;
     }
 
     body {
@@ -26,7 +21,6 @@
       background-color: #080004;
       background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
       background-size: cover;
-      color: #f5f5f5;
       text-align: center;
       padding: 80px 20px;
     }
@@ -39,7 +33,6 @@
       margin-bottom: 40px;
     }
 
-
     .subtitle {
       font-family: 'Beyond Wonderland', serif;
       font-size: 1em;
@@ -48,11 +41,10 @@
       margin-bottom: 50px;
     }
 
-  
     .texte {
       font-family: 'Devil Inside', serif;
       font-size: 1em;
-      color: rgba(255, 255, 255, 0.3);
+      color: rgba(200, 200, 200, 0.6); /* gris clair légèrement transparent */
       max-width: 700px;
       margin-left: auto;
       margin-right: auto;
@@ -67,7 +59,7 @@
   <div class="subtitle">ARG.</div>
 
   <p class="texte">Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
-  <p class="texte">Indice : cherchez le mot <strong>CLAVIS</strong>.</p>
+  <p class="texte">Indice : cherchez le mot CLAVIS.</p>
   <p class="texte">(Essayez de taper <code>indice.html</code> à la fin du lien du site…)</p>
 </body>
 </html>
