--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="subtitle">ARG.</div>
 
   <p class="texte">Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
-  <p class="texte">Indice : cherchez le mot CLAVIS.</p>
+  <p class="texte">Indice : cherchez le mot <code>CLAVIS<code>.</p>
   <p class="texte">(Essayez de taper <code>indice.html</code> à la fin du lien du site…)</p>
 </body>
 </html>
