--- a/index.html
+++ b/index.html
@@ -4,62 +4,66 @@
   <meta charset="UTF-8">
   <title>ANEMOIA ARG</title>
 
+
   <style>
     @font-face {
-      font-family: 'Beyond Wonderland';
-      src: url('fonts/Beyond Wonderland.ttf') format('truetype');
+      font-family: 'Who Asks Satan';
+      src: url('fonts/who asks satan.ttf') format('truetype');
     }
-
     @font-face {
-      font-family: 'Devil Inside';
-      src: url('fonts/Devil Inside.otf') format('opentype');
+      font-family: 'AquilineTwo';
+      src: url('fonts/AquilineTwo.ttf') format('truetype');
     }
 
     body {
-      margin: 0;
-      padding: 0;
       background-color: #080004;
       background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-      background-size: cover;
+      color: rgba(255,255,255,0.85);
+      font-family: 'AquilineTwo', sans-serif;
       text-align: center;
-      padding: 80px 20px;
+      padding: 60px;
     }
 
+   
     h1 {
-      font-family: 'Beyond Wonderland', serif;
+      font-family: 'Who Asks Satan', serif;
       font-size: 4em;
-      letter-spacing: 15px;
-      color: rgba(255, 255, 0, 0.25);
+      color: #ffffff;
       margin-bottom: 40px;
     }
 
-    .subtitle {
-      font-family: 'Beyond Wonderland', serif;
-      font-size: 1em;
-      color: rgba(255, 255, 0, 0.1);
-      letter-spacing: 10px;
-      margin-bottom: 50px;
+   
+    p {
+      font-size: 1.3em;
+      line-height: 1.6em;
+      color: rgba(200,200,200,0.7);
+      max-width: 700px;
+      margin: 20px auto;
     }
 
-    .texte {
-      font-family: 'Devil Inside', serif;
-      font-size: 1em;
-      color: rgba(200, 200, 200, 0.6); /* gris clair légèrement transparent */
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      letter-spacing: 2px;
-      line-height: 1.5em;
+    code {
+      font-family: 'AquilineTwo', monospace;
+      background-color: rgba(255,255,255,0.1);
+      padding: 2px 6px;
+      border-radius: 4px;
+      color: rgba(255,255,255,0.9);
+    }
+
+  
+    .small {
+      font-size: 0.8em;
+      color: rgba(255,255,255,0.3);
+      margin-top: 50px;
     }
   </style>
 </head>
 
 <body>
-  <h1>ANEMOIA</h1>
-  <div class="subtitle">ARG.</div>
+  <h1>ANEMOIA ARG</h1>
 
-  <p class="texte">Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
-  <p class="texte">Indice : cherchez le mot <code>CLAVIS<code>.</p>
-  <p class="texte">(Essayez de taper <code>indice.html</code> à la fin du lien du site…)</p>
+  <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
+  <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
+
+  <p class="small">Petits yeux ouverts… grands mystères à venir.</p>
 </body>
 </html>
