--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>ANEMOIA ARG</title>
+  <title>ANEMOIA</title>
 
 
   <style>
@@ -27,15 +27,15 @@
    
     h1 {
       font-family: 'Who Asks Satan', serif;
-      font-size: 4em;
+      font-size: 7em;
       color: #ffffff;
       margin-bottom: 40px;
     }
 
    
     p {
-      font-size: 1.3em;
-      line-height: 1.6em;
+      font-size: 4em;
+      line-height: 3em;
       color: rgba(200,200,200,0.7);
       max-width: 700px;
       margin: 20px auto;
@@ -51,7 +51,7 @@
 
   
     .small {
-      font-size: 0.8em;
+      font-size: 8em;
       color: rgba(255,255,255,0.3);
       margin-top: 50px;
     }
