--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   
     .small {
-      font-size: 8em;
+      font-size: 4em;
       color: rgba(255,255,255,0.3);
       margin-top: 50px;
     }
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-  <h1>ANEMOIA ARG</h1>
+  <h1>ANEMOIA</h1>
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
   <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
