--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
    
     h1 {
       font-family: 'Who Asks Satan', serif;
-      font-size: 10em;
+      font-size: 16em;
       color: #ffffff;
       margin-bottom: 40px;
     }
 
    
     p {
-      font-size: 4em;
+      font-size: 8em;
       line-height: 3em;
       color: rgba(200,200,200,0.7);
       max-width: 700px;
@@ -51,7 +51,7 @@
 
   
     .small {
-      font-size: 3em;
+      font-size: 2em;
       color: rgba(255,255,255,0.3);
       margin-top: 50px;
     }
@@ -62,7 +62,8 @@
   <h1>ANEMOIA</h1>
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
-  <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
+  <p>Indice : cherchez le mot <code>clavis</code> pour avancer dans l’aventure.</p>
+  <p> Pour continuer l'aventure, ajoute <code>indice.html</code> à l'URL.
 
   <p class="small">Petits yeux ouverts… grands mystères à venir.</p>
 </body>
