--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
   <p>Indice : cherchez le mot <code>clavis</code> pour avancer dans l’aventure.</p>
-  <p> Pour continuer l'aventure, ajoute <code>indice.html</code> à l'URL.
+  <p> Tu es assez curieux pour nous rejoindre ? Ajoute <code>indice.html</code> à l'URL et plonge dans l'univers secret des R éunions D es O mbres.
 
   <p class="small">Petits yeux ouverts… grands mystères à venir.</p>
 </body>
