--- a/index.html
+++ b/index.html
@@ -2,69 +2,69 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>ANEMOIA</title>
-
+  <title>ANEMOIA ARG</title>
 
   <style>
+    /* Polices locales */
     @font-face {
       font-family: 'Who Asks Satan';
       src: url('fonts/who asks satan.ttf') format('truetype');
     }
     @font-face {
-      font-family: 'AquilineTwo';
-      src: url('fonts/AquilineTwo.ttf') format('truetype');
+      font-family: 'HelpMe';
+      src: url('fonts/HelpMe.ttf') format('truetype');
     }
 
+    /* Styles globaux */
     body {
       background-color: #080004;
       background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
       color: rgba(255,255,255,0.85);
-      font-family: 'AquilineTwo', sans-serif;
+      font-family: 'HelpMe', sans-serif;
       text-align: center;
       padding: 60px;
     }
 
-   
+    /* Titre */
     h1 {
       font-family: 'Who Asks Satan', serif;
-      font-size: 16em;
+      font-size: 5em;
       color: #ffffff;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
 
-   
+    /* Texte normal */
     p {
-      font-size: 8em;
-      line-height: 3em;
-      color: rgba(200,200,200,0.7);
+      font-size: 1.4em;
+      line-height: 1.6em;
+      color: rgba(200,200,200,0.75);
       max-width: 700px;
       margin: 20px auto;
     }
 
+    /* Mot clé en code */
     code {
-      font-family: 'AquilineTwo', monospace;
+      font-family: 'HelpMe', monospace;
       background-color: rgba(255,255,255,0.1);
       padding: 2px 6px;
       border-radius: 4px;
       color: rgba(255,255,255,0.9);
     }
 
-  
+    /* Texte discret */
     .small {
-      font-size: 2em;
-      color: rgba(255,255,255,0.3);
-      margin-top: 50px;
+      font-size: 0.9em;
+      color: rgba(255,255,255,0.4);
+      margin-top: 30px;
     }
   </style>
 </head>
 
 <body>
-  <h1>ANEMOIA</h1>
+  <h1>ANEMOIA ARG</h1>
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
-  <p>Indice : cherchez le mot <code>clavis</code> pour avancer dans l’aventure.</p>
-  <p> Tu es assez curieux pour nous rejoindre ? Ajoute <code>indice.html</code> à l'URL et plonge dans l'univers secret des R éunions D es O mbres.
-
-  <p class="small">Petits yeux ouverts… grands mystères à venir.</p>
+  <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
+  <p class="small">Ajoute <code>indice.html</code> à l’URL pour poursuivre l’aventure.</p>
 </body>
 </html>
