--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       src: url('fonts/who asks satan.ttf') format('truetype');
     }
     @font-face {
-      font-family: 'HelpMe';
-      src: url('fonts/HelpMe.ttf') format('truetype');
+      font-family: 'StrangerBack';
+      src: url('fonts/Stranger back in the Night.ttf') format('truetype');
     }
 
     /* Styles globaux */
@@ -20,7 +20,7 @@
       background-color: #080004;
       background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
       color: rgba(255,255,255,0.85);
-      font-family: 'HelpMe', sans-serif;
+      font-family: 'StrangerBack', sans-serif;
       text-align: center;
       padding: 60px;
     }
@@ -44,7 +44,7 @@
 
     /* Mot clé en code */
     code {
-      font-family: 'HelpMe', monospace;
+      font-family: 'StrangerBack', monospace;
       background-color: rgba(255,255,255,0.1);
       padding: 2px 6px;
       border-radius: 4px;
