--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>ANEMOIA ARG</title>
+  <title>ANEMOIA</title>
 
   <style>
     /* Polices locales */
@@ -11,8 +11,8 @@
       src: url('fonts/who asks satan.ttf') format('truetype');
     }
     @font-face {
-      font-family: 'StrangerBack';
-      src: url('fonts/Stranger back in the Night.ttf') format('truetype');
+      font-family: 'HelpMe';
+      src: url('fonts/HelpMe.ttf') format('truetype');
     }
 
     /* Styles globaux */
@@ -20,7 +20,7 @@
       background-color: #080004;
       background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
       color: rgba(255,255,255,0.85);
-      font-family: 'StrangerBack', sans-serif;
+      font-family: 'HelpMe', sans-serif;
       text-align: center;
       padding: 60px;
     }
@@ -44,7 +44,7 @@
 
     /* Mot clé en code */
     code {
-      font-family: 'StrangerBack', monospace;
+      font-family: 'HelpMe', monospace;
       background-color: rgba(255,255,255,0.1);
       padding: 2px 6px;
       border-radius: 4px;
@@ -61,10 +61,10 @@
 </head>
 
 <body>
-  <h1>ANEMOIA ARG</h1>
+  <h1>ANEMOIA</h1>
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
   <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
-  <p class="small">Ajoute <code>indice.html</code> à l’URL pour poursuivre l’aventure.</p>
+  <p class="small">Tu souhaites plonger dans l'univers des Réunions De L'ombre ? Ajoute <code>indice.html</code> à l’URL, et peut-être sauras-tu trouver l'accès aux plus grands des secrets...</p>
 </body>
 </html>
