--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   <h1>ANEMOIA</h1>
 
   <p>Certains secrets ne s’offrent qu’aux yeux attentifs…</p>
+  <p> Tu souhaites rejoindre l'univers mystérieux des Réunions De L'ombre ?
   <p>Indice : cherchez le mot <code>CLAVIS</code> pour avancer dans l’aventure.</p>
-  <p class="small">Tu souhaites rejoindre l'univers mystérieux des Réunions De L'ombre ? Ajoute <code>indice.html</code> à l’URL pour accéder à la prochaine étape de ce long périple...</p>
+  <p>Ajoute ce simple code à l’URL pour accéder à la prochaine étape de ce long périple...</p>
 </body>
 </html>
