--- a/index.html
+++ b/index.html
@@ -33,11 +33,27 @@
       padding: 30px;
       border-radius: 10px;
     }
-    .mdp {
-      font-family: monospace;
-      background: rgba(255,255,255,0.1);
-      padding: 2px 6px;
-      border-radius: 3px;
+    input[type="password"] {
+      padding: 8px;
+      font-size: 1em;
+      border-radius: 5px;
+      border: none;
+      margin-top: 10px;
+    }
+    button {
+      padding: 8px 15px;
+      font-size: 1em;
+      margin-left: 5px;
+      border-radius: 5px;
+      border: none;
+      background-color: rgba(255,255,255,0.2);
+      color: #fff;
+      cursor: pointer;
+    }
+    .error {
+      color: #ff5555;
+      margin-top: 15px;
+      display: none;
     }
   </style>
 </head>
@@ -46,10 +62,27 @@
   <div class="box">
     <p>« Les ombres veillent sur ceux qui osent. »</p>
     <p>Le Don a laissé un mot pour ses fidèles.</p>
-    <p>Message laissé par le Don :</p>
-    <p><em>“Vkrq fdw lqfrph wkh prw qhhghg. Brx vhh wkh vrph skudfkrqv…?”</em></p>
-    <p>Indice : <em>César a parlé → décale 3 lettres en arrière dans l'alphabet pour révéler le mot secret.</em></p>
-  
+    <p> Message laissé par le Don :</p>
+    <p>“Vkrq fdw lqfrph wkh prw qhhghg. Brx vhh wkh vrph skudfkrqv…?”</p>
+    <p>Indice : César a parlé → décale 3 lettres en arrière dans l'alphabet pour révéler le mot secret.
+    <p>Entrez le mot secret pour poursuivre l’aventure :</p>
+    <input type="password" id="mdpInput" placeholder="Mot secret">
+    <button onclick="checkMDP()">Entrer</button>
+    <p class="error" id="errorMsg">Mot secret incorrect, réessayez.</p>
   </div>
+
+  <script>
+    function checkMDP() {
+      const input = document.getElementById('mdpInput').value.trim().toUpperCase();
+      const correct = 'SIGNA'; // ton mot secret
+      const error = document.getElementById('errorMsg');
+      
+      if(input === correct) {
+        window.location.href = "https://ammaturo-jil.github.io/anemoia/indice.html";
+      } else {
+        error.style.display = 'block';
+      }
+    }
+  </script>
 </body>
 </html>
