--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>ANEMOIA ARG</title>
+  <title>ANEMOIA</title>
   <style>
     @font-face {
       font-family: 'WhoAsksSatan';
@@ -61,7 +61,7 @@
   <h1>ANEMOIA</h1>
   <div class="box">
     <p>« Les ombres veillent sur ceux qui osent. »</p>
-    <p> Le parrain a caché le message dans son bureau. Sur le bureau, il y a trois dossiers : ‘FAMILLE’, ‘TRAHISON’, ‘OMERTÀ’. Lequel contient le mot qui ouvrira la porte des Ombres ?.</p>
+    <p> Le parrain a cache le message dans son bureau. Sur le bureau, il y a trois dossiers : ‘FAMILLE’, ‘TRAHISON’, ‘OMERTA’. Lequel contient le mot qui ouvrira la porte des Ombres ?.</p>
     <p>Entrez le mot secret pour poursuivre l’aventure :</p>
     <input type="password" id="mdpInput" placeholder="Mot secret">
     <button onclick="checkMDP()">Entrer</button>
