--- a/indice.html
+++ b/indice.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Indice 1 — ANEMOIA</title>
+    <title>ANEMOIA</title>
     <!-- Polices -->
     <style>
       @font-face {
@@ -79,7 +79,7 @@
 
   <body>
     <h1>ANEMOIA</h1>
-    <p>Le parrain a laissé un chiffre sur la table : 15. Il ajoute dans un petit mot : ‘Le jour ou tout bascule.’ 
+    <p>Le parrain a laisse un chiffre sur la table : 15. Il ajoute dans un petit mot : ‘Le jour ou tout bascule.’ 
     Combine le chiffre avec le mois d’Halloween pour trouver le mot-cle.’</p>
     <p>Entrez le mot de passe pour continuer l’aventure :</p>
 
