--- a/indice.html
+++ b/indice.html
@@ -7,7 +7,7 @@
     <style>
       @font-face {
         font-family: 'WhoAsksSatan';
-        src: url('fonts/Who Asks Satan.ttf') format('truetype');
+        src: url('fonts/who asks satan.ttf') format('truetype');
       }
       @font-face {
         font-family: 'HelpMe';
