--- a/indice.html
+++ b/indice.html
@@ -25,7 +25,7 @@
 
       h1 {
         font-family: 'WhoAsksSatan', serif;
-        font-size: 4em;
+        font-size: 60px;
         color: rgba(255, 255, 255, 1);
         margin-bottom: 50px;
       }
